[ppcrong.20180716][BLETOOLBOX] 1st commit

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -32,15 +32,13 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# IntelliJ
+# Intellij
 *.iml
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
-.idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
-.idea/caches
 .idea
 
 # Keystore files
@@ -56,13 +54,6 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
-
-# fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
-fastlane/readme.md
 
 # Misc files
 /local.properties
