--- a/app/extraLibraries.gradle
+++ b/app/extraLibraries.gradle
@@ -10,6 +10,10 @@ ext {
             'com.afollestad.material-dialogs:commons:0.9.6.0',
             // EventBus
             'org.greenrobot:eventbus:3.0.0',
+            // rxandroidble
+            "com.polidea.rxandroidble2:rxandroidble:1.6.0",
+            // rxandroid
+            'io.reactivex.rxjava2:rxandroid:2.0.2',
             // For Android-M permission
             project(':rxpermlib'),
             // LogLib
