--- a/app/extraLibraries.gradle
+++ b/app/extraLibraries.gradle
@@ -14,6 +14,9 @@ ext {
             "com.polidea.rxandroidble2:rxandroidble:1.6.0",
             // rxandroid
             'io.reactivex.rxjava2:rxandroid:2.0.2',
+            // rxlifecycle
+            'com.trello.rxlifecycle2:rxlifecycle:2.2.1',
+            'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1',
             // For Android-M permission
             project(':rxpermlib'),
             // LogLib
