[ppcrong.20180802][BLETOOLBOX] 1. Import unityahrs 2. Use apollo to replace eventbus for IPC 3. Add rxjava and rxlifecycle proguard to fix gradle build fail

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
 
     // Butter Knife
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    // Apollo
+    annotationProcessor "com.github.lsxiao.Apollo:processor:1.0.2"
 }
