--- a/app/extraLibraries.gradle
+++ b/app/extraLibraries.gradle
@@ -8,8 +8,10 @@ ext {
             'com.intuit.sdp:sdp-android:1.0.3',
             // MaterialDialog
             'com.afollestad.material-dialogs:commons:0.9.6.0',
-            // EventBus
-            'org.greenrobot:eventbus:3.0.0',
+            // Apollo
+            "com.github.lsxiao.Apollo:core:1.0.2",
+            // Apollo IPC
+            "com.github.lsxiao.Apollo:ipc:1.0.2",
             // rxandroidble
             "com.polidea.rxandroidble2:rxandroidble:1.6.0",
             // rxandroid
@@ -26,6 +28,8 @@ ext {
             // Utils
             project(':utils'),
             // BleScanner
-            project(':blescanner')
+            project(':blescanner'),
+            // Unity AHRS
+            project(':unityahrs')
     ]
 }
