--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,5 @@ include ':utils'
 project(":utils").projectDir = file("../../libs/utils")
 include ':blescanner'
 project(":blescanner").projectDir = file("../../libs/blescanner")
+include ':unityahrs'
+project(":unityahrs").projectDir = file("../../libs/unityahrs")
