[ppcrong.20181030][BLETOOLBOX] Import otalib

--- a/app/extraLibraries.gradle
+++ b/app/extraLibraries.gradle
@@ -30,6 +30,8 @@ ext {
             // BleScanner
             project(':blescanner'),
             // Unity AHRS
-            project(':unityahrs')
+            project(':unityahrs'),
+            // OtaLib
+            project(':otalib')
     ]
 }
