--- a/app/extraLibraries.gradle
+++ b/app/extraLibraries.gradle
@@ -12,6 +12,8 @@ ext {
             "com.github.lsxiao.Apollo:core:1.0.2",
             // Apollo IPC
             "com.github.lsxiao.Apollo:ipc:1.0.2",
+            // EventBus
+            'org.greenrobot:eventbus:3.0.0',
             // rxandroidble
             "com.polidea.rxandroidble2:rxandroidble:1.6.0",
             // rxandroid
