--- a/app/extraLibraries.gradle
+++ b/app/extraLibraries.gradle
@@ -15,7 +15,9 @@ ext {
             // EventBus
             'org.greenrobot:eventbus:3.0.0',
             // rxandroidble
-            "com.polidea.rxandroidble2:rxandroidble:1.6.0",
+            "com.polidea.rxandroidble2:rxandroidble:1.7.1",
+            // rxjava
+            "io.reactivex.rxjava2:rxjava:2.2.2",
             // rxandroid
             'io.reactivex.rxjava2:rxandroid:2.0.2',
             // rxlifecycle
