[ppcrong.21081219][BLETOOLBOX] Disable proguard for release version to do workaround for build fail

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,15 @@ android {
         debug {
             buildConfigField "boolean", "LOG_DEBUG", "true"
             minifyEnabled false
+            useProguard false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
         release {
             buildConfigField "boolean", "LOG_DEBUG", "true"
             minifyEnabled true
             shrinkResources true
+            useProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
