[ppcrong.20181221][BLETOOLBOX][UART] Check connection before send to avoid exception

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
-                <!--<category android:name="com.ppcrong.bletoolbox.LAUNCHER"/>-->
+                <category android:name="com.ppcrong.bletoolbox.LAUNCHER"/>
             </intent-filter>
         </activity>
 
