[ppcrong.20180110][CCTOOLBOX] 1. Add Base SettingsActivity 2. Add Settings for CSC 3. Base menu handles settings and about items 4. Enable preference for CSC 5. Fix AhrsActivity exception by adding EventBus @Subscribe

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,6 +107,12 @@
             </intent-filter>
         </activity>
 
+        <!-- Settings -->
+        <activity
+            android:name=".base.SettingsActivity"
+            android:label="@string/action_settings"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
