[ppcrong.20190410][CCTOOLBOX] Correct CGMS comment and hide CGMS for 1.000.003 release

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,7 +174,7 @@
             </intent-filter>
         </activity>
 
-        <!-- BGM -->
+        <!-- CGMS -->
         <activity
             android:name=".cgms.CgmsActivity"
             android:icon="@drawable/ic_feature_cgms"
@@ -185,7 +185,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="com.ppcrong.bletoolbox.LAUNCHER"/>
+                <!--<category android:name="com.ppcrong.bletoolbox.LAUNCHER"/>-->
             </intent-filter>
         </activity>
     </application>
