[ppcrong.20190410][CCTOOLBOX] Add parsers for BPM, HRM, CSC, BGM, HTM, RSC

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -185,7 +185,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
-                <!--<category android:name="com.ppcrong.bletoolbox.LAUNCHER"/>-->
+                <category android:name="com.ppcrong.bletoolbox.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
