[ppcrong.20190605][CCTOOLBOX] Rename folder and file name to CCTOOLBOX

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,5 @@ include ':unityahrs'
 project(":unityahrs").projectDir = file("../../libs/unityahrs")
 include ':otalib'
 project(":otalib").projectDir = file("../../libs/otalib")
+include ':ccparser'
+project(":ccparser").projectDir = file("../../libs/ccparser")
